tests/ui/demux/non_exhaustive_fails.stderr
error[E0282]: type annotations needed for `std::sync::Arc<T>`
  --> $DIR/non_exhaustive_fails.rs:24:9
   |
24 |         demux!(MyEnum::A, /* MyEnum::B, */ MyEnum::C)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider giving this closure parameter the explicit type `std::sync::Arc<T>`, where the type parameter `T` is specified
   |
   = note: type must be known at this point
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
